# my-taste

./: README.md
back-end/: Cargo.toml
front-end/: package.json
front-end/public/: index.html
front-end/src/: App.css  App.tsx  IngredientInput.tsx
icecream/: package-lock.json  package.json
icecream/src/: App.css  App.tsx
tasteful/: Cargo.toml
tasteful/src/: main.rs
tasteful/static/: index.html
