[package]
name = "tasteful"
version = "0.1.0"
edition = "2021"
authors = ["Elise Zeng", "Bryan Zeng", "Cliff Lin"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dev-dependencies]
rand ="0.8"